# pyroll-integral-thermal

./: .gitmodules  LICENSE  README.md  hatch.toml  pyproject.toml
docs/: config.py  docs.md  docs.tex  roll_pass.tex  symbols.sty  task_compile_latex.py  thermal-symbols.bib  thermal-symbols.glstex  thermal-symbols.sty  transport.tex
pyroll/integral_thermal/: __init__.py  cooling_pipe.py  export_impls.py  helper.py  profile_impls.py  profile_specs.py  report.py  report_impls.py  roll_pass.py  roll_pass_impls.py  roll_pass_out_specs.py  roll_pass_roll_specs.py  roll_pass_specs.py  transport.py  transport_impls.py  transport_out_specs.py  transport_specs.py
pyroll_integral_thermal/: __init__.py  backups.py  profile_impls.py  profile_specs.py  report.py  report_impls.py  roll_pass_impls.py  roll_pass_specs.py  transport_impls.py  transport_specs.py
tests/: config.yaml  input.py  test_cooling_pipe.py  test_solve.py  test_solve3.py
tests/roll_pass/: test_contact.py  test_deformation.py
